Finished port to CP 8.0.0
Schema Registry container simply used the wrong port.